# Parallel-Programming-2025-Final

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/: ADAPTIVE.md  ALGORITHM.md  ARCHITECTURE.md  CODEBASE.md  IMPROVE.md  MEMORY_USAGE.md
assets/testcases/: case-00.yaml
assets/testcases/case-00/: config.yaml
assets/testcases/case-00/source/: left_config.yaml
assets/testcases/case-01/: config.yaml
assets/testcases/case-01/source/: left_config.yaml
assets/testcases/case-02/: config.yaml
assets/testcases/case-02/source/: left_config.yaml
assets/testcases/case-03/: config.yaml
assets/testcases/case-03/source/: left_config.yaml
assets/testcases/case-04/: config.yaml
assets/testcases/case-04/source/: left_config.yaml
assets/testcases/case-05/: config.yaml
assets/testcases/case-06/: config.yaml
include/: config.h  data_types.h  geometry.h  kernels.h  profiler.h  sim_config.h  simulation.h  sorting.h  source.h  utils.cuh  visualize.h
scripts/: configure  draw_result.py  env  make_circle  run_release  run_vis  sbatch  schedule.py  srun  testcase.py  vis_map.py  vis_particles.py  visualize.py  watch
scripts/geometry/: __init__.py  base.py  circle.py  ellipse.py
src/: geometry.cu  kernels.cu  main.cu  profiler.cu  sim_config.cu  simulation.cu  sorting.cu  source.cu  visualize.cu
src_cpu/: CMakeLists.txt  data_types_cpu.h  kernels_cpu.cpp  kernels_cpu.h  main_cpu.cpp  simulation_cpu.cpp  simulation_cpu.h  sorting_cpu.cpp  sorting_cpu.h  source_cpu.cpp  source_cpu.h  visualize_cpu.cpp  visualize_cpu.h
